Manager table update

--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -741,4 +741,7 @@
   <data name="I want to develop" xml:space="preserve">
     <value>Chcę rozwijać</value>
   </data>
+  <data name="User Category" xml:space="preserve">
+    <value>Kategoria użytkownika</value>
+  </data>
 </root>
