--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -741,4 +741,7 @@
   <data name="I want to develop" xml:space="preserve">
     <value>I want to develop</value>
   </data>
+  <data name="User Category" xml:space="preserve">
+    <value>User Category</value>
+  </data>
 </root>
