Added localization option to user interface

--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -744,4 +744,16 @@
   <data name="User Category" xml:space="preserve">
     <value>Kategoria użytkownika</value>
   </data>
+  <data name="checked[F]" xml:space="preserve">
+    <value>zaznaczona</value>
+  </data>
+  <data name="checked[M]" xml:space="preserve">
+    <value>zaznaczony</value>
+  </data>
+  <data name="unchecked[F]" xml:space="preserve">
+    <value>odznaczona</value>
+  </data>
+  <data name="unchecked[M]" xml:space="preserve">
+    <value>odznaczony</value>
+  </data>
 </root>
