--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -846,4 +846,22 @@
   <data name="Invalid login attempt." xml:space="preserve">
     <value>Invalid login attempt.</value>
   </data>
+  <data name="Certificate name is required!" xml:space="preserve">
+    <value>Certificate name is required!</value>
+  </data>
+  <data name="Certificate Description EN" xml:space="preserve">
+    <value>Certificate Description EN</value>
+  </data>
+  <data name="Certificate Description PL" xml:space="preserve">
+    <value>Certificate Description PL</value>
+  </data>
+  <data name="Certificate description is required!" xml:space="preserve">
+    <value>Certificate description is required!</value>
+  </data>
+  <data name="Date Valid To" xml:space="preserve">
+    <value>Date Valid To</value>
+  </data>
+  <data name="Upload Image" xml:space="preserve">
+    <value>Upload Image</value>
+  </data>
 </root>
