--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -882,4 +882,25 @@
   <data name="Password cannot be empty!" xml:space="preserve">
     <value>Password cannot be empty!</value>
   </data>
+  <data name="Wrong data provided" xml:space="preserve">
+    <value>Wrong data provided</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="Upload Photo" xml:space="preserve">
+    <value>Upload Photo</value>
+  </data>
+  <data name="User Deleted" xml:space="preserve">
+    <value>User Deleted</value>
+  </data>
+  <data name="There is no user with those credentials" xml:space="preserve">
+    <value>There is no user with those credentials</value>
+  </data>
+  <data name="Password is required" xml:space="preserve">
+    <value>Password is required</value>
+  </data>
+  <data name="Resend email confirmation" xml:space="preserve">
+    <value>Resend email confirmation</value>
+  </data>
 </root>
