--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -903,4 +903,7 @@
   <data name="Resend email confirmation" xml:space="preserve">
     <value>Resend email confirmation</value>
   </data>
+  <data name="Attachment" xml:space="preserve">
+    <value>Attachment</value>
+  </data>
 </root>
