--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -906,4 +906,7 @@
   <data name="Attachment" xml:space="preserve">
     <value>Attachment</value>
   </data>
+  <data name="Has Expiration Date" xml:space="preserve">
+    <value>Has Expiration Date</value>
+  </data>
 </root>
