--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -915,4 +915,7 @@
   <data name="Update Category" xml:space="preserve">
     <value>Update Category</value>
   </data>
+  <data name="You need to save question first" xml:space="preserve">
+    <value>You need to save question first</value>
+  </data>
 </root>
