--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -921,4 +921,25 @@
   <data name="Update" xml:space="preserve">
     <value>Update</value>
   </data>
+  <data name="Option Description EN" xml:space="preserve">
+    <value>Option Description EN</value>
+  </data>
+  <data name="Option Description PL" xml:space="preserve">
+    <value>Option Description PL</value>
+  </data>
+  <data name="Fill all fields" xml:space="preserve">
+    <value>Fill all fields</value>
+  </data>
+  <data name="Enable" xml:space="preserve">
+    <value>Enable</value>
+  </data>
+  <data name="Disable" xml:space="preserve">
+    <value>Disable</value>
+  </data>
+  <data name="Enabled" xml:space="preserve">
+    <value>Enabled</value>
+  </data>
+  <data name="Disabled" xml:space="preserve">
+    <value>Disabled</value>
+  </data>
 </root>
