--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -945,4 +945,10 @@
   <data name="User with this Email alread exists" xml:space="preserve">
     <value>User with this Email already exists</value>
   </data>
+  <data name="OOPS! PAGE YOU REQUESTED COULD NOT FOUND" xml:space="preserve">
+    <value>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</value>
+  </data>
+  <data name="Back" xml:space="preserve">
+    <value>Back</value>
+  </data>
 </root>
