--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -945,10 +945,7 @@
   <data name="User with this Email alread exists" xml:space="preserve">
     <value>Użytkownik o takim adresie Email już istnieje</value>
   </data>
-  <data name="OOPS! PAGE YOU REQUESTED COULD NOT FOUND" xml:space="preserve">
-    <value>UPS! NIE MOŻNA ZNALEŹĆ STRONY, KTÓREJ POTRZEBUJESZ</value>
-  </data>
-  <data name="Back" xml:space="preserve">
-    <value>Powrót</value>
+  <data name="Password minimum length is 8 characters" xml:space="preserve">
+    <value>Minimalna długość hasła to 8 znaków</value>
   </data>
 </root>
